# rnpgp-quickstart

./: CMakeLists.txt  README.md  RnpCoreBal.cpp  RnpCoreDefinitions.h  RnpCoreParams.cpp  RnpCoreParams.h  file-utils.cpp  find_package_test.cpp  main.cpp
RnpCore/: CMakeLists.txt  RnpCoreBal.cpp  RnpCoreBal.h  RnpCoreInterface.cpp  RnpCoreParams.cpp  RnpCoreParams.h  RnpKeys.h
RnpCore/export/: RnpCoreInterface.h
